--- a/code/page_no_IOB_optimize.ipynb
+++ b/code/page_no_IOB_optimize.ipynb
@@ -340,8 +340,8 @@
     "model = AutoModelForTokenClassification.from_pretrained(model_path)\n",
     "\n",
     "# Test line\n",
-    "test_line = \"\"\"RealXIQ AB (publ) 4 (6)\n",
-    "Org.nr 556513-3245\n",
+    "test_line = \"\"\\n",
+    "",
     "\n",
     "B al ans räkn ing Not 2016-12-31 2016-04-30\n",
     "EGET KAPITAL OCH SKULDER\n",
